styles.css
/* ... */
#title-container {
  padding-top: 107px;
}

#title-stack {
  gap: 89px;
  align-items: normal !important;
}

@media screen and (max-width: 600px) {
  .pink-oval {
    display: none;
  }
}

@media screen and (max-width: 600px) and (min-width: 526px) {
  #main-title {
    font-size: 90px !important;
    line-height: 94px !important;
    margin-bottom: 75px !important;
  }

  #pink-oval-600 {
    display: inline !important;
    left: 135px;
    top: 225px;
  }
}

@media screen and (max-width: 525px) and (min-width: 481px) {
  #main-title {
    font-size: 80px !important;
    line-height: 87px !important;
  }

  #pink-oval-525 {
    display: inline !important;
    left: 130px;
    top: 215px;
  }
}

@media screen and (max-width: 480px) and (min-width: 426px) {
  #main-title {
    font-size: 70px !important;
    line-height: 80px !important;
  }

  #pink-oval-480 {
    display: inline !important;
    top: 235px;
  }
}

@media screen and (max-width: 425px) {
  #main-title {
    font-size: 60px !important;
    line-height: 73px !important;
  }
  #pink-oval-480 {
    display: inline !important;
    top: 223px;
    left: 95px;
  }
}

.pink-oval {
  position: absolute !important;
  z-index: 0;
}

#main-title {
  text-align: left;
  margin-bottom: 89px;
  font-style: normal !important;
  font-weight: 700 !important;
  font-size: 124px;
  line-height: 150px;
  color: #adadad;
}

.vstack {
  flex: none !important;
}

/* //styleName: Desktop title;
font-family: Inter;
font-size: 124px;
font-weight: 700;
line-height: 150px;
letter-spacing: 0em;
text-align: left;
 */

#vote-title {
  color: #dc3545;
  position: absolute;
}

#ballot-box {
  margin-top: 55px;
}

/* .register-button-desktop {
  height: 74px;
  width: 654px;
  border-radius: 16px;
  font-size: 20px;
  font-weight: 600; } */

/* .register-button-tablet {
  height: 74px;
width: 619px;
border-radius: 14px;
text size: 20px;
weight: 600
 } */

/* .register-button-mobile {
  height: 46px;
width: 333px;
border-radius: 8px;
text size: 18px;
weight: 600
 } */
@media screen and (max-width: 600px) {
  #about-section {
    max-width: 100%;
    margin-top: 44px !important;
  }
}

#about-section {
  margin-top: 96px;
  width: 495px;
}

.btn {
  padding: 14px 24px !important;
  font-size: 16px !important;
  line-height: 18px !important;
  font-weight: 600 !important;
}

.btn-register {
  all: unset;
  border-color: #28a745 !important;
  background-color: #e6f2ec !important;
  box-shadow: 4px 4px 0px 0px #bdccc4;
  border: 1px solid #28a745 !important;
  box-shadow: 4px 4px 0px #bdccc4 !important;
  border-radius: 16px !important;
  color: #107c46 !important;
  font-style: normal !important;
  font-weight: 600 !important;
  letter-spacing: 0.02em !important;
}

.btn-register-desktop {
  padding: 25px 0px !important;
  width: 654px;
  font-size: 20px !important;
  line-height: 24px !important;
}

.btn-register-mobile {
  padding: 12px 0px !important;
  width: 100%;
  font-size: 18px !important;
  line-height: 22px !important;
}

.btn-success {
  background-color: #28a745 !important;
  border-color: #28a745 !important;
  text-align: left !important;
}

.btn-outline-success {
  --bs-btn-color: #28a745 !important;
  --bs-btn-border-color: #28a745 !important;
  --bs-btn-hover-color: #fff;
  --bs-btn-hover-bg: #28a745 !important;
  --bs-btn-hover-border-color: #28a745 !important;
  --bs-btn-focus-shadow-rgb: 25, 135, 84;
  --bs-btn-active-color: #fff;
  --bs-btn-active-bg: #28a745 !important;
  --bs-btn-active-border-color: #28a745 !important;
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: #28a745 !important;
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: #28a745 !important;
  --bs-gradient: none;
}

#form-section {
  /* background-color: #f9d9dc; */
  background-image: url('assets/Pink\ background.jpg');
  /* height: 1160px; */
  padding-bottom: 168px;
  background-color: #f9d9dc;
  background-position: center;
  background-repeat: no-repeat;
}

#form-section-title {
  white-space: nowrap;
  font-style: normal;
  font-weight: 700;
  font-size: 58px;
  line-height: 70px;
  padding-top: 104px;
  margin-bottom: 78px;
  align-items: center;
  text-align: center;
}

@media screen and (max-width: 600px) {
  #form-section-title {
    word-wrap: break-word !important;
    white-space: normal !important;
    font-size: 28px !important;
    padding-top: 3vh;
    margin-bottom: 3vh;
    padding-left: 4vh;
    padding-right: 4vh;
  }
  #polling-form {
    border-right: none !important;
    border-left: none !important;
  }

  #form-section {
    padding-bottom: 8rem !important;
  }

  #footer {
    width: 85% !important;
  }
}

@media screen and (max-width: 818px) {
  #form-section-title {
    white-space: wrap !important;
    font-size: 2.2rem;
    padding-top: 4vh;
    margin-bottom: 4vh;
  }
  #polling-form {
    width: 100vw !important;
    border-right: none !important;
    border-left: none !important;
  }
}

#polling-form {
  box-shadow: 0px 4px 0px 0px #00000040;
  background-color: white;
  margin: auto;
  padding-left: 55px;
  padding-right: 55px;
  padding-top: 38px;
  padding-bottom: 55px;
  border: 1px solid #000000;
  box-sizing: border-box;
  width: 818px;
  left: 347px;
}

.form-margin-bottom {
  margin-bottom: 35px !important;
}

.form-label {
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  margin-bottom: 0px !important;
  padding-bottom: 14px;
}

.form-control {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 14px 16px;
  gap: 8px;
  font-style: normal;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 20px;
  width: 707px;
  height: 48px;
}
/* ... */

